Estructura de la API, sus carpetas y ajustes

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=BankLinkDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "ClaveSuperSecretaDeDesarrollo",
+    "Issuer": "BankLink.Api",
+    "Audience": "BankLink.Client"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
